@@ -1,6 +1,8 @@
 2010-12-29  Roland Clobus <rclobus@rclobus.nl>
 	* client/common/client.c, client/ai/ai.c: Added a logbot, as suggested
 	by Andreas Steinel <lnxbil@users.sourceforge.net>
+	* common/gtk/gtkbugs.c: Fixed and explained the guard around Gtk bug
+	56070.
 
 2010-12-10  Roland Clobus <rclobus@rclobus.nl>
 	* client/common/client.c: Don't process zero num_soldiers on
